K8S/platforms-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: platforms-depl
spec:
 replicas: 1
 selector:
  matchLabels:
   app: platformservice
 template:
  metadata:
   labels:
    app: platformservice
  spec:
   containers:
    - name: platformservice
      image: andreibagan/platformservice:latest
---
apiVersion: v1
kind: Service
metadata:
 name: platforms-clusterip-srv
spec:
 type: ClusterIP
 selector:
  app: platformservice
 ports: 
  - name: platformservice
    protocol: TCP
    port: 80
    targetPort: 80
